# stroyassortimentai

./: .dockerignore  .env  .env.example  CLAUDE.md  PRICE_CALCULATION_ANALYSIS.md  START.md  agent.py  ai_service.py  analyze_catalog.py  analyze_categories.py  bot.py  catalog_analysis_report.json  catalog_analysis_report.md  docker-compose.yml  export_1c_catalog_to_csv.py  extract_docs.py  gmail_service.py  pass  prg1c.conf  pyproject.toml  run.sh  test_1c_api_detailed.py  test_1c_api_simple.py  test_search_products.py  wireguard-install.sh
backend/: 1c_catalog_full_20260118_201417.csv  AUDIT_AI_ROUTER.md  Dockerfile.ai_service  Dockerfile.api  Dockerfile.bot  Dockerfile.gmail  agent.py  agent_old_backup.py  ai_service.py  api.py  auth.py  bot.py  check_db.py  create_admin_simple.py  docker-entrypoint.sh  generate_password_hash.py  generate_secret.py  gmail_service.py  main.py  params_manager.py  pyproject.toml  runtime_config.py  test_catalog_sync.py  test_email.py  test_price_audit.py  test_price_conversion.py
backend/data/: company_info.json  crawl_manifest.json  info.json  kb.json  kb_v2_schema.json  merged.txt  port-forward.sh  prg1c.conf  prompt_v9_with_calculator.txt  updated_prompt.txt
backend/db/: add_mock_data.py  check_prompt.py  create_admin.py  init_db.py  init_settings.py  models.py  repository.py  session.py
backend/schemas/: c1_schemas.py  service_schemas.py
backend/scripts/: load_kb_v2_to_db.py  migrate_kb_to_v2.py
backend/services/: ai_router.py  catalog_sync.py  crm_router.py
backend/tools/: __init__.py  calculator_tool.py  sales_tools.py  (+6 more)
(+73 files in other folders)
